--- a/msc-data/nwp_caps/changelog_caps_en/index.html
+++ b/msc-data/nwp_caps/changelog_caps_en/index.html
@@ -135,7 +135,7 @@
 
 <p><a href="../changelog_caps_fr/">En français</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; CAPS Changelog</p>
+<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_caps_en/">CAPS</a> &gt; CAPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-canadian-arctic-prediction-system-caps">Chronology of changes to the Canadian Arctic Prediction System (CAPS)</h1>
 <h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
 <h3 id="upgrade-to-version-210-of-the-caps-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 2.1.0 of the CAPS adapted to the New High Performance Computing Infrastructure.</h3>
