--- a/msc-data/nwp_caps/changelog_caps_fr/index.html
+++ b/msc-data/nwp_caps/changelog_caps_fr/index.html
@@ -112,7 +112,7 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-secondary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-level="1"><a href="#chronologie-des-changements-apportes-systeme-canadien-de-prevision-de-lartique-scpa" class="nav-link">Chronologie des changements apportés Système canadien de prévision de l'artique (SCPA)</a>
+            <li class="nav-item" data-level="1"><a href="#chronologie-des-changements-apportes-au-systeme-canadien-de-prevision-de-lartique-scpa" class="nav-link">Chronologie des changements apportés au Système canadien de prévision de l'Artique (SCPA)</a>
               <ul class="nav flex-column">
             <li class="nav-item" data-level="2"><a href="#le-mardi-21-janvier-2020" class="nav-link">Le mardi 21 janvier 2020</a>
               <ul class="nav flex-column">
@@ -135,13 +135,13 @@
 
 <p><a href="../changelog_caps_en/">In English</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; Changements au SCPA</p>
-<h1 id="chronologie-des-changements-apportes-systeme-canadien-de-prevision-de-lartique-scpa">Chronologie des changements apportés Système canadien de prévision de l'artique (SCPA)</h1>
+<p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_caps_fr/">SCPA</a> &gt; Changements au SCPA</p>
+<h1 id="chronologie-des-changements-apportes-au-systeme-canadien-de-prevision-de-lartique-scpa">Chronologie des changements apportés au Système canadien de prévision de l'Artique (SCPA)</h1>
 <h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
 <h3 id="mise-a-jour-du-scpa-a-la-version-210-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jour du SCPA à la version 2.1.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
 <p>Voir les détails via <a href="../../changelog_multisystems_fr/">ce lien</a>.</p>
 <h2 id="le-jeudi-28-juin-2018">Le jeudi 28 juin 2018</h2>
-<h3 id="mise-a-jour-majeure-du-systeme-de-prevision-de-lartique-scpa-version-110-mode-experimental-du-centre-meteorologique-canadien-cmc">Mise à jour majeure du Système de prévision de l'artique SCPA version 1.1.0 (mode expérimental) du Centre météorologique canadien (CMC)</h3>
+<h3 id="mise-a-jour-majeure-du-systeme-de-prevision-de-lartique-scpa-version-110-mode-experimental-du-centre-meteorologique-canadien-cmc">Mise à jour majeure du Système de prévision de l'Artique SCPA version 1.1.0 (mode expérimental) du Centre météorologique canadien (CMC)</h3>
 <p>Le jeudi 28 juin 2018, à compter de la passe de 1200 UTC, le Centre météorologique canadien (CMC) du Service météorologique du Canada (SMC) a procédé à une mise à jour majeure de son système de prévision de l'artique SCPA (mode expérimental).</p>
 <p>Résumé des éléments majeurs que comporte cette mise à jour :</p>
 <ul>
