--- a/msc-data/nwp_riops/changelog_riops_en/index.html
+++ b/msc-data/nwp_riops/changelog_riops_en/index.html
@@ -135,7 +135,7 @@
 
 <p><a href="../changelog_riops_fr/">En français</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; RIOPS Changelog</p>
+<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; <a href="../readme_riops_en/">RIOPS</a> &gt; RIOPS Changelog</p>
 <h1 id="chronology-of-changes-to-the-regional-ice-and-ocean-prediction-system-riops">Chronology of changes to the Regional Ice and Ocean Prediction System (RIOPS)</h1>
 <h2 id="tuesday-january-21-2020">Tuesday January 21, 2020</h2>
 <h3 id="upgrade-to-version-210-of-the-riops-adapted-to-the-new-high-performance-computing-infrastructure">Upgrade to Version 2.1.0 of the RIOPS adapted to the New High Performance Computing Infrastructure.</h3>
