--- a/msc-data/nwp_riops/changelog_riops_fr/index.html
+++ b/msc-data/nwp_riops/changelog_riops_fr/index.html
@@ -135,7 +135,7 @@
 
 <p><a href="../changelog_riops_en/">In English</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; Changements au SRPOG</p>
+<p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; <a href="../readme_riops_en/">SRPOG</a> &gt; Changements au SRPOG</p>
 <h1 id="chronologie-des-changements-apportes-au-systeme-regional-de-prevision-ocean-glace-srpog">Chronologie des changements apportés au Système Régional de Prévision Océan-Glace (SRPOG)</h1>
 <h2 id="le-mardi-21-janvier-2020">Le mardi 21 janvier 2020</h2>
 <h3 id="mise-a-jours-du-srpog-a-la-version-210-suite-a-la-nouvelle-infrastructure-de-calcul-haute-performance">Mise à jours du SRPOG à la version 2.1.0 suite à la nouvelle infrastructure de calcul haute performance.</h3>
