--- a/msc-data/obs_hydrometric/readme_hydrometric_en/index.html
+++ b/msc-data/obs_hydrometric/readme_hydrometric_en/index.html
@@ -112,7 +112,7 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-secondary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-level="1"><a href="#data-and-products-of-real-time-hydrometric" class="nav-link">Data and products of real time hydrometric</a>
+            <li class="nav-item" data-level="1"><a href="#hydrometric-observations-data" class="nav-link">Hydrometric observations data</a>
               <ul class="nav flex-column">
             <li class="nav-item" data-level="2"><a href="#description-of-the-system" class="nav-link">Description of the system</a>
               <ul class="nav flex-column">
@@ -135,15 +135,16 @@
 
 <p><a href="../readme_hydrometric_fr/">En français</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; Hydrometric data</p>
-<h1 id="data-and-products-of-real-time-hydrometric">Data and products of real time hydrometric</h1>
+<p><a href="../../../readme_en/">TOC</a> &gt; <a href="../../readme_en/">MSC data</a> &gt; Hydrometric observations</p>
+<h1 id="hydrometric-observations-data">Hydrometric observations data</h1>
 <h2 id="description-of-the-system">Description of the system</h2>
-<p>Real-time hydrometric data containing real-time unit water level and flow data for rivers and lakes across Canada.</p>
+<p>Real-time and historical hydrometric data including stations, water levels and flow data for rivers and lakes across Canada.</p>
 <h2 id="access">Access</h2>
 <h3 id="how-to-access-the-data">How to access the data</h3>
-<p>These data are available on the data server services <a href="../../../msc-datamart/readme_en/">MSC Datamart</a> and the web services <a href="../../../msc-geomet/readme_en/">MSC GeoMet</a> respectively:</p>
+<p>The data is available from the MSC GeoMet web services API and on the MSC Datamart data server:</p>
 <ul>
-<li><a href="../readme_hydrometric-datamart_en/">CSV data available on the MSC Datamart</a> </li>
+<li>Real-time hydrometric observations: <a href="../readme_hydrometric-datamart_en/">CSV data available on the MSC Datamart</a> </li>
+<li>Historical hydrometric observations: <a href="../../../msc-geomet/readme_en/">API available from GeoMet-OGC-API</a></li>
 </ul>
 <p>An <a href="../../../usage/readme_en/">overview and examples to access and use the Meteorological Service of Canada's open data</a> is available.</p>
 <h3 id="licence">Licence</h3>
