--- a/msc-data/obs_hydrometric/readme_hydrometric_fr/index.html
+++ b/msc-data/obs_hydrometric/readme_hydrometric_fr/index.html
@@ -112,7 +112,7 @@
     <div id="toc-collapse" class="navbar-collapse collapse card bg-secondary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-level="1"><a href="#donnees-et-produits-hydrometriques-en-temps-reel" class="nav-link">Données et produits hydrométriques en temps réel</a>
+            <li class="nav-item" data-level="1"><a href="#donnees-dobservations-hydrometriques" class="nav-link">Données d'observations hydrométriques</a>
               <ul class="nav flex-column">
             <li class="nav-item" data-level="2"><a href="#acces" class="nav-link">Accès</a>
               <ul class="nav flex-column">
@@ -131,14 +131,15 @@
 
 <p><a href="../readme_hydrometric_en/">In English</a></p>
 <p><img alt="ECCC logo" src="../../../img_eccc-logo.png" /></p>
-<p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; Données hydrométriques</p>
-<h1 id="donnees-et-produits-hydrometriques-en-temps-reel">Données et produits hydrométriques en temps réel</h1>
-<p>Données hydrométriques en temps réel contenant les données unitaires de niveau d'eau et de débit en temps réel pour les rivières et les lacs dans tout le Canada.</p>
+<p><a href="../../../readme_fr/">TdM</a> &gt; <a href="../../readme_fr/">Données du SMC</a> &gt; Observations hydrométriques</p>
+<h1 id="donnees-dobservations-hydrometriques">Données d'observations hydrométriques</h1>
+<p>Données hydrométriques en temps réel et historiques contenant les stations, les données de niveau d'eau et de débit pour les rivières et les lacs dans tout le Canada.</p>
 <h2 id="acces">Accès</h2>
 <h3 id="comment-acceder-aux-donnees">Comment accéder aux données</h3>
-<p>Ces données sont respectivement disponibles sur les services du serveur de données <a href="../../../msc-datamart/readme_fr/">Datamart du SMC</a> et les services web <a href="../../../msc-geomet/readme_fr/">GeoMet du SMC</a> :</p>
+<p>Ces données sont respectivement disponibles sur les services du serveur de données Datamart du SMC et les services web GeoMet du SMC :</p>
 <ul>
-<li><a href="../readme_hydrometric-datamart_fr/">Données CSV disponibles sur le Datamart du SMC</a> </li>
+<li>Observations hydrométriques en temps réel : <a href="../readme_hydrometric-datamart_fr/">Données CSV disponibles sur le Datamart du SMC</a> </li>
+<li>Observations hydrométriques historiques : <a href="../../../msc-geomet/readme_fr/">API disponible via GeoMet-OGC-API</a></li>
 </ul>
 <p>Un <a href="../../../usage/readme_fr/">survol et exemples pour accéder et utiliser les données ouvertes du Service météorologique du Canada</a> est disponible.</p>
 <h3 id="licence">Licence</h3>
