--- a/msc-data/readme_en/index.html
+++ b/msc-data/readme_en/index.html
@@ -185,7 +185,9 @@
 <li><a href="../nwp_gdps/readme_gdps_en/">Global Deterministic Prediction System (GDPS)</a></li>
 <li><a href="../nwp_rdps/readme_rdps_en/">Regional Deterministic Prediction System (RDPS)</a></li>
 <li><a href="../nwp_hrdps/readme_hrdps_en/">High Resolution Deterministic Prediction System (HRDPS)</a></li>
+<li><a href="../nwp_caps/readme_caps_en/">Experimental Canadian Arctic Prediction System (CAPS)</a> </li>
 <li><a href="../nwp_giops/readme_giops_en/">Global Ice Ocean Prediction System (GIOPS)</a></li>
+<li><a href="../nwp_riops/readme_riops_en/">Regional Ice Ocean Prediction System (RIOPS)</a></li>
 <li><a href="../nwp_gdwps/readme_gdwps_en/">Global Deterministic Wave Prediction System (GDWPS)</a></li>
 <li><a href="../nwp_rdwps/readme_rdwps_en/">Regional Deterministic Wave Prediction System (RDWPS)</a></li>
 <li><a href="../nwp_rdpa/readme_rdpa_en/">Regional Deterministic Precipitation Analysis (RDPA)</a></li>
