--- a/msc-data/readme_fr/index.html
+++ b/msc-data/readme_fr/index.html
@@ -175,7 +175,9 @@
 <li><a href="../nwp_gdps/readme_gdps_fr/">Système global de prévision déterministe (SGPD)</a></li>
 <li><a href="../nwp_rdps/readme_rdps_fr/">Système régional de prévision déterministe (SRPD)</a></li>
 <li><a href="../nwp_hrdps/readme_hrdps_fr/">Système à haute résolution de prévision déterministe (SHRPD)</a></li>
+<li><a href="../nwp_caps/readme_caps_fr/">Système canadien de prévision de l'Arctique (SCPA) expérimental</a></li>
 <li><a href="../nwp_giops/readme_giops_fr/">Système global de prévision océan-glace (SGPOG)</a></li>
+<li><a href="../nwp_riops/readme_riops_fr/">Système régional de prévision océan-glace (SRPOG)</a></li>
 <li><a href="../nwp_rdwps/readme_rdwps_fr/">Système régional de prévision déterministe de vague (SRPDV)</a></li>
 <li><a href="../nwp_gdwps/readme_gdwps_fr/">Système global de prévision déterministe de vague (SGPDV)</a></li>
 <li><a href="../nwp_rdpa/readme_rdpa_fr/">Analyse régionale déterministe de précipitation (ARDP)</a></li>
