--- a/msc-geomet/readme_en/index.html
+++ b/msc-geomet/readme_en/index.html
@@ -151,7 +151,7 @@
 <p><img alt="ECCC logo" src="../../img_eccc-logo.png" /></p>
 <p><a href="../../readme_en/">TOC</a> &gt; MSC GeoMet</p>
 <h1 id="msc-geomet">MSC GeoMet</h1>
-<p>The MSC GeoMet platform provides public access to the Meteorological Service of Canada (MSC) and Environment and Climate Change Canada (ECCC) data via interoperable web services and application programming interfaces (API). Through open standards, users can freely and quickly access thousands of real-time and archived weather, climate and water datasets and products and integrate them in their domain-specific applications and decision support systems. Users can build mobile apps, create interactive web maps, and display and animate MSC data in desktop software. MSC GeoMet also enables on-the-fly raw data clipping and reprojection, on-the-fly format conversion and custom visualization.</p>
+<p>The MSC GeoMet platform provides public access to the Meteorological Service of Canada (MSC) and Environment and Climate Change Canada (ECCC) data via interoperable web services and application programming interfaces (API). Through open standards, users can freely and quickly access thousands of real-time and archived weather, climate and water datasets and products and integrate them in their domain-specific applications and decision support systems. Users can build mobile apps, create interactive web maps, and display and animate MSC data in desktop software. MSC GeoMet also enables on demand raw data clipping and reprojection, on demand format conversion and custom visualization.</p>
 <h2 id="usage-tutorials-and-technical-documentation">Usage, tutorials and technical documentation</h2>
 <p>Overview, examples and tutorials to access and use MSC GeoMet data:</p>
 <ul>
