--- a/readme_en/index.html
+++ b/readme_en/index.html
@@ -184,7 +184,7 @@
 </ul>
 <p>Tutorials:</p>
 <ul>
-<li><strong>Use data in the QGIS desktop software</strong>:<ul>
+<li><strong>Access and use data in the QGIS desktop software</strong>:<ul>
 <li><a href="../usage/tutorial_WMS_QGIS_en/">Add, query and animate WMS layers</a></li>
 <li><a href="../usage/tutorial_OAFeat_QGIS_en/">Add and query OGC API Features layers</a></li>
 <li><a href="../usage/tutorial_raw-data_QGIS_en/">Add raw data</a></li>
