--- a/readme_fr/index.html
+++ b/readme_fr/index.html
@@ -184,7 +184,7 @@
 </ul>
 <p>Tutoriels :</p>
 <ul>
-<li><strong>Utiliser les données dans le logiciel de bureau QGIS</strong> :<ul>
+<li><strong>Accéder et utiliser les données dans le logiciel de bureau QGIS</strong> :<ul>
 <li><a href="../usage/tutorial_WMS_QGIS_fr/">Ajouter, effectuer des requêtes et animer des couches WMS</a></li>
 <li><a href="../usage/tutorial_OAFeat_QGIS_fr/">Ajouter et effectuer des requêtes aux couches OGC API Features</a></li>
 <li><a href="../usage/tutorial_raw-data_QGIS_fr/">Ajouter des données brutes</a></li>
