--- a/usage/tutorial_WMS_QGIS_en/index.html
+++ b/usage/tutorial_WMS_QGIS_en/index.html
@@ -128,6 +128,10 @@
               <ul class="nav flex-column">
               </ul>
             </li>
+            <li class="nav-item" data-level="2"><a href="#browsing-through-available-wms-layer-styles" class="nav-link">Browsing through available WMS layer styles</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
             <li class="nav-item" data-level="2"><a href="#possible-interactions-with-wms-layers-in-qgis" class="nav-link">Possible interactions with WMS layers in QGIS</a>
               <ul class="nav flex-column">
               </ul>
@@ -151,6 +155,7 @@
 <ul>
 <li><a href="#adding-wms-layers-in-qgis">Adding WMS layers in QGIS</a></li>
 <li><a href="#possible-interactions-with-wms-layers-in-qgis">Possible interactions with WMS layers in QGIS</a></li>
+<li><a href="#browsing-through-available-wms-layer-styles">Browsing through available WMS layer styles</a></li>
 <li><a href="#manipulating-the-time-component-of-the-wms-layers">Manipulating the time component of the WMS layers</a></li>
 </ul>
 <h2 id="adding-wms-layers-in-qgis">Adding WMS layers in QGIS</h2>
@@ -176,6 +181,16 @@
 </ol>
 <p>Animated example of the procedure:</p>
 <p><img alt="Adding WMS layers in QGIS" src="https://collaboration.cmc.ec.gc.ca/cmc/cmos/public_doc/usage/images_QGIS/qgis_add-wms_en.gif" /></p>
+<h2 id="browsing-through-available-wms-layer-styles">Browsing through available WMS layer styles</h2>
+<p><a href="../../msc-geomet/readme_en/">MSC GeoMet</a> often provides several different graphical representations for a single layer. The client can choose to display the data using the style most appropriate for their use case. For more information on the WMS styles, visit the <a href="https://eccc-msc.github.io/open-data/msc-geomet/web-services_en/#handling-styles">handling styles</a> page.</p>
+<p>It's possible to use QGIS to browse through available styles for a given WMS layer and the following example will show how to do so:</p>
+<ol>
+<li>In the menu bar, choose: <b>Layer - Add Layer - Add WMS/WMTS layer...</b><br></li>
+<li>Select the desired WMS service and click on <img src="https://collaboration.cmc.ec.gc.ca/cmc/cmos/public_doc/usage/images_QGIS/qgis_button-connexion_en.png" width=7%></li>
+<li>Navigate through the tree structure to reach the desired layer, and expand the last level</li>
+<li>Choose amongst the available styles, the one you want to visualize for the selected WMS layer and click on <img src="https://collaboration.cmc.ec.gc.ca/cmc/cmos/public_doc/usage/images_QGIS/qgis_button-add_en.png" width=5%> to display the layer</li>
+</ol>
+<p><img alt="Browsing through WMS styles with QGIS" src="https://collaboration.cmc.ec.gc.ca/cmc/cmos/public_doc/usage/images_QGIS/qgis_wms-styles_en.png" /></p>
 <h2 id="possible-interactions-with-wms-layers-in-qgis">Possible interactions with WMS layers in QGIS</h2>
 <p>Here are the basic manipulations of a WMS layer:</p>
 <ul>
