--- a/index.html
+++ b/index.html
@@ -215,6 +215,6 @@
 </html>
 
 <!--
-MkDocs version : 1.1
-Build Date UTC : 2020-05-01 19:38:47
+MkDocs version : 1.1.2
+Build Date UTC : 2020-05-27 19:07:36.988725+00:00
 -->
